      - New options '--include-archives', '--exclude-archives',
        '--include-codenames', --exclude-codenames'.
    - 'policy':
      - 'Candidate' field name is ambiguous, changed it to 'Preferred'.
    - 'source':
      - Downloading source package parts: include only those codename/component
        pairs to long descriptions which belong to a selected base
        download URI.
    - Managing packages:
      - Don't print misleading 'Performing requested actions' when there is
        nothing to do.
      - New option '--show-not-preferred'.
  * lib:
    - system/resolvers/native:
      - Removing automatically installed packages: stopped considering
        those inter-package relations which are satisfied by some
        non-removable package.
      - Implemented partially sticked packages. This should get rid of
        duplicate solutions. (Closes: #641473)
    - download/progresses/console:
      - Printing 'download failed' messages: use a download number instead of
        the download description.
      - Printing 'download failed' messages: reformatted to have the error
        string earlier in the string and match the 'Get:<number>' style.
    - config:
      - New options 'cupt::cache::limit-releases::by-archive',
        'cupt::cache::limit-releases::by-archive::type'.
      - New options 'cupt::cache::limit-releases::by-codename',
        'cupt::cache::limit-releases::by-codename::type'.
      - New option 'cupt::console::actions-preview::show-not-preferred'.
    - system/worker:
      - Logging: log errors too.
      - Downloading package archives: include only those codename/component
        pairs to long descriptions which belong to a selected base
        download URI.
    - cache:
      - Honor 'cupt::cache::limit-releases::*' options.
  * doc:
    - What was referred as 'candidate version' is really
      the 'preferred version'.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Thu, 22 Sep 2011 11:33:25 +0300
